  with missing nc and nonce params.
- Proxy fix now also updates wsgi.url_scheme based on X-Forwarded-Proto.
- Added support for key prefixes to the redis cache.
- Added the ability to supress some auto corrections in the wrappers
  that are now controlled via `autocorrect_location_header` and
  `automatically_set_content_length` on the response objects.

Version 0.7.2
-------------

(bugfix release, release date to be announced)

- Fixed a CSRF problem with the debugger.
- The debugger is now generating private pastes on lodgeit.
- If URL maps are now bound to environments the query arguments
  are properly decoded from it for redirects.

Version 0.7.1
-------------

(bugfix release, released on July 26th 2011)

- Fixed a problem with newer versions of IPython.
- Disabled pyinotify based reloader which does not work reliably.

Version 0.7
-----------

Released on July 24th 2011, codename Schraubschlüssel

- Add support for python-libmemcached to the Werkzeug cache abstraction
  layer.
- Improved :func:`url_decode` and :func:`url_encode` performance.
- Fixed an issue where the SharedDataMiddleware could cause an
  internal server error on weird paths when loading via pkg_resources.
- Fixed an URL generation bug that caused URLs to be invalid if a
  generated component contains a colon.
- :func:`werkzeug.import_string` now works with partially set up
  packages properly.
- Disabled automatic socket swiching for IPv6 on the development
  server due to problems it caused.
- Werkzeug no longer overrides the Date header when creating a
  conditional HTTP response.
- The routing system provides a method to retrieve the matching
  methods for a given path.
- The routing system now accepts a parameter to change the encoding
  error behaviour.
- The local manager can now accept custom ident functions in the
  constructor that are forwarded to the wrapped local objects.
- url_unquote_plus now accepts unicode strings again.